--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>org.sonatype.nexus.examples</groupId>
   <artifactId>simple-project</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>simple-project</name>
@@ -16,18 +16,17 @@
    		<connection>scm:git:https://github.com/apachehadoop/simple-project.git</connection>
    		<url>https://github.com/apachehadoop</url>
    		<developerConnection>scm:git:https://github.com/apachehadoop/simple-project.git</developerConnection>
-    <tag>1.0.0</tag>
   </scm>
   <distributionManagement>
     <repository>
       <id>nexus</id>
       <name>Nexus Releases</name>
-      <url>http://192.168.5.11:8081/repository/vision-release/</url>
+      <url>http://localhost:8081/repository/vision-repository/</url>
     </repository>
     <snapshotRepository>
       <id>nexus</id>
       <name>Nexus Snapshot</name>
-      <url>http://192.168.5.11:8081/repository/vision-snap-shot/</url>
+      <url>http://localhost:8081/repository/vision-snapshot/</url>
     </snapshotRepository>
     <!-- 
     <site>
@@ -68,7 +67,7 @@
    </executions>
    <configuration>
       <serverId>nexus</serverId>
-      <nexusUrl>http://192.168.5.11:8081/nexus/</nexusUrl>
+      <nexusUrl>http://localhost:8081/nexus/</nexusUrl>
       <skipStaging>true</skipStaging>
    </configuration>
 </plugin>
