--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.sonatype.nexus.examples</groupId>
 	<artifactId>simple-project</artifactId>
-	<version>1.0.5-SNAPSHOT</version>
+	<version>1.0.5</version>
 	<packaging>jar</packaging>
 
 	<name>simple-project</name>
@@ -17,7 +16,7 @@
 		<connection>scm:git:https://github.com/apachehadoop/simple-project.git</connection>
 		<url>https://github.com/apachehadoop</url>
 		<developerConnection>scm:git:https://github.com/apachehadoop/simple-project.git</developerConnection>
-		<tag>1.0.2R</tag>
+		<tag>v1.0.5RE</tag>
 	</scm>
 	<distributionManagement>
 		<repository>
