--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.sonatype.nexus.examples</groupId>
 	<artifactId>simple-project</artifactId>
-	<version>1.0.6</version>
+	<version>1.0.7-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>simple-project</name>
@@ -16,7 +16,7 @@
 		<connection>scm:git:https://github.com/apachehadoop/simple-project.git</connection>
 		<url>https://github.com/apachehadoop</url>
 		<developerConnection>scm:git:https://github.com/apachehadoop/simple-project.git</developerConnection>
-		<tag>v1.0.6</tag>
+		<tag>1.0.2R</tag>
 	</scm>
 	<distributionManagement>
 		<repository>
